--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,14 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.15)
 
+#set vcpkg env variables! You don't need that if you have set those environment variables
+#set(VCPKG_TARGET_TRIPLET x86-windows)
+#set(VCPKG_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/vcpkg)
+
+# Configure vcpkg
+include(cmake/app_utils.cmake)
+setup_vcpkg_before_project()
+
+#setup the program language: c++ and some othe parameters
 project(CryptoLocker LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
@@ -9,22 +18,30 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-#set(VCPKG_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/vcpkg)
-#set(VCPKG_TARGET_TRIPLET x64-windows)
-#set(CMAKE_TOOLCHAIN_FILE ${VCPKG_ROOT_DIR}/scripts/buildsystems/vcpkg.cmake)
-
+# configure qt
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
-#find_package(Boost 1.81.0 REQUIRED COMPONENTS filesystem system)
+
+#configuration for Boost library
+#list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+#find_package(Boost REQUIRED)
+find_package(Boost REQUIRED COMPONENTS filesystem system)
 
 add_executable(CryptoLocker
   main.cpp
   view/screenblocker.h
   view/screenblocker.cpp
-  #service/folderservice.cpp
-  #service/folderservice.h
+  service/folderservice.cpp
+  service/folderservice.h
 )
-target_link_libraries(CryptoLocker Qt${QT_VERSION_MAJOR}::Widgets) #PRIVATE Boost::filesystem Boost::system
+
+target_link_libraries(CryptoLocker
+    PRIVATE
+	Qt${QT_VERSION_MAJOR}::Widgets 
+        ${Boost_FILESYSTEM_LIBRARY}
+        Boost::system
+        Boost::filesystem
+)
 
 install(TARGETS CryptoLocker
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
