--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.15)
 
 #set vcpkg env variables! You don't need that if you have set those environment variables
 #set(VCPKG_TARGET_TRIPLET x64-windows)
-#set(VCPKG_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/vcpkg)
 
 # Configure vcpkg
 include(cmake/app_utils.cmake)
@@ -19,14 +18,16 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # configure qt
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
 
 #configuration for Boost library
-#list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-#set(Boost_INCLUDE_DIR "./vcpkg_installed/x64-windows/include")
-#message(STATUS "Boost_INCLUDE_DIR = ${Boost_INCLUDE_DIR}")
+#set(Boost_USE_STATIC_LIBS ON)
+#set(Boost_USE_STATIC_RUNTIME ON)
 find_package(Boost REQUIRED COMPONENTS filesystem system)
+
+#configuration for Boost library
+find_package(cryptopp CONFIG REQUIRED)
 
 add_executable(CryptoLocker
   main.cpp
@@ -34,14 +35,19 @@ add_executable(CryptoLocker
   view/screenblocker.cpp
   service/folderservice.cpp
   service/folderservice.h
+  service/rsaencryptor.h
+  service/rsaencryptor.cpp
 )
 
 target_link_libraries(CryptoLocker
     PRIVATE
-	Qt${QT_VERSION_MAJOR}::Widgets 
-        ${Boost_FILESYSTEM_LIBRARY}
+        Qt${QT_VERSION_MAJOR}::Core
+        Qt${QT_VERSION_MAJOR}::Widgets
+        #${Boost_FILESYSTEM_LIBRARY}
+        #${Boost_LIBRARIES}
         Boost::system
         Boost::filesystem
+        cryptopp::cryptopp
 )
 
 install(TARGETS CryptoLocker
